--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
         </ul>
         <ul>
             <li><a href="https://towag.org/song_database/" target="_blank">TOW Song Database</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Y4UpXcsNIcQ&list=PLaKqPOEw4NcC098ttv19iUDQ8QMbiGDEz/" target="_blank">Recordings</a></li>
         </ul>
     </section>
     
@@ -261,7 +262,7 @@
                     "约书亚乐团歌谱 Joshua Band OFFICIAL CHORDS",
                     "赞美之泉歌谱 Stream of Praise OFFICIAL CHORDS",
                     "赞美之泉敬拜工作坊 Stream of Praise WORKSHOP",
-                    "Muititrack.com CHORDS", "TOW Song Database"
+                    "Muititrack.com CHORDS", "TOW Song Database", "Recordings"
                 ];
                 
                 let resourceMap = new Map();
