--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </ul>
         <ul>
             <li><a href="https://towag.org/song_database/" target="_blank">TOW Song Database</a></li>
-            <li><a href="https://www.youtube.com/watch?v=Y4UpXcsNIcQ&list=PLaKqPOEw4NcC098ttv19iUDQ8QMbiGDEz/" target="_blank">Recordings</a></li>
+            <li><a href="https://youtube.com/playlist?list=PLaKqPOEw4NcC098ttv19iUDQ8QMbiGDEz&si=lDlCS5JIC1HsY4o9/" target="_blank">Recordings</a></li>
         </ul>
     </section>
     
