--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
                     "敬拜团指南 LSC Worship Team Guideline",
                     "敬拜团乐手指南 LSC Musicians Guideline",
                     "Muititrack.com CHORDS", 
+                    "约书亚乐团歌谱 Joshua Band OFFICIAL CHORDS",
+                    "赞美之泉歌谱 Stream of Praise OFFICIAL CHORDS",
+                    "赞美之泉敬拜工作坊 Stream of Praise WORKSHOP",
                     "TOW Song Database", 
                     "Recordings"
                 ];
