--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
                     "敬拜团时间表 LSC Worship Team Schedule",
                     "敬拜团指南 LSC Worship Team Guideline",
                     "敬拜团乐手指南 LSC Musicians Guideline",
-                    "Muititrack.com CHORDS", 
                     "约书亚乐团歌谱 Joshua Band OFFICIAL CHORDS",
                     "赞美之泉歌谱 Stream of Praise OFFICIAL CHORDS",
                     "赞美之泉敬拜工作坊 Stream of Praise WORKSHOP",
+                    "Muititrack.com CHORDS"
                 ];
                 
                 let resourceMap = new Map();
