--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     "约书亚乐团歌谱 Joshua Band OFFICIAL CHORDS",
                     "赞美之泉歌谱 Stream of Praise OFFICIAL CHORDS",
                     "赞美之泉敬拜工作坊 Stream of Praise WORKSHOP",
-                    "Muititrack.com CHORDS"
+                    "Muititrack.com CHORDS", "TOW Song Database", "Recordings"
                 ];
                 
                 let resourceMap = new Map();
