--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                 <label for="worship-leader-filter" style="display: inline-block; width: 180px;">Filter by Worship Leader:</label>
                 <select id="worship-leader-filter" onchange="filterSongs()">
                     <option value="">ALL</option>
+                    <option value="Daniel">Daniel</option>
                     <option value="Eddie">Eddie</option>
                     <option value="James">James</option>
                     <option value="Shirly">Shirly</option>
