--- a/index.html
+++ b/index.html
@@ -269,13 +269,12 @@ async function getResourceFolders() {
 
     // List the resources in a specific order
     const orderedResources = [
+        "敬拜团资讯 LSC Worship Team Info",
         "敬拜团时间表 LSC Worship Team Schedule",
-        "敬拜团指南 LSC Worship Team Guideline",
-        "敬拜团乐手指南 LSC Musicians Guideline",
-        "约书亚乐团歌谱 Joshua Band OFFICIAL CHORDS",
-        "赞美之泉歌谱 Stream of Praise OFFICIAL CHORDS",
-        "赞美之泉敬拜工作坊 Stream of Praise WORKSHOP",
-        "Muititrack.com CHORDS", "TOW Song Database", "Recordings"
+        "约书亚官方团谱 Joshua Band Official Band Chart",
+        "赞美之泉官方歌谱 SOP Official Chord Chart",
+        "赞美之泉敬拜工作坊 SOP Workshop",
+        "TOW Song Database", "Recordings"
     ];
 
     let resourceHTML = "";
